dataset1235/2025-2/805158916/users/867352253/executions/2651470117_2667036473.log
== SUBMISSION (2025-08-25 15:02:08)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:10:37)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:56:28)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
round(x,2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:18:00)
-- CODE: 
tempC=float(input("temperatura em celsius: "))
tempK= tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
temperatura em celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
temperatura em celsius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
temperatura em celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
temperatura em celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:09:26)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:01:58)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:07:13)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:12:33)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:07:04)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:06:02)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:11:37)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
celsius = kelvin + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = kelvin + 273.15
              ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = kelvin + 273.15
              ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = kelvin + 273.15
              ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = kelvin + 273.15
              ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = kelvin + 273.15
              ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = kelvin + 273.15
              ^^^^^^
NameError: name 'kelvin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:12:26)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:06:29)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:10:21)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:55:50)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:55:34)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:02:55)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
round(x,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:57:38)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:02:18)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:09:14)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:06:55)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:06:45)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:56:37)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
round(x,2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(x,2)
          ^
NameError: name 'x' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:54:12)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:58:11)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:01:49)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:06:38)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:06:26)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:17:31)
-- CODE: 
tempC=float(input("temperatura em celsius: "))
tempK= tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
temperatura em celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
temperatura em celsius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
temperatura em celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
temperatura em celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:57:57)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:06:19)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:55:45)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:07:24)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:11:45)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
celsius = kelvin + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = kelvin + 273.15
              ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = kelvin + 273.15
              ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = kelvin + 273.15
              ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = kelvin + 273.15
              ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = kelvin + 273.15
              ^^^^^^
NameError: name 'kelvin' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    celsius = kelvin + 273.15
              ^^^^^^
NameError: name 'kelvin' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:07:25)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:01:56)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:02:23)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:18:13)
-- CODE: 
tempC=float(input("temperatura em celsius: "))
tempK= tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
temperatura em celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
temperatura em celsius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
temperatura em celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
temperatura em celsius: 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:58:20)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:01:55)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:57:26)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:01:39)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:12:14)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))
kelvin = celsius + 273.15
print(f"A temperatura de kelvin é:{kelvin:.2f} K")
kelvin = round(celsius + 273.15, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura: A temperatura de kelvin é:293.40 K
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:263.15 K
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:233.15 K
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:373.15 K
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura: A temperatura de kelvin é:273.15 K
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura: A temperatura de kelvin é:303.65 K
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:54:23)
-- CODE: 
celsius = float(input("Digite uma temperatura: "))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite uma temperatura:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite uma temperatura:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite uma temperatura:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite uma temperatura:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite uma temperatura:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite uma temperatura:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
